# aerial-alter-ego

./: LICENSE  README.md
Onboard-SDK-ROS/: ReadMe.md
Onboard-SDK-ROS/dji_sdk/launch/: sdk.launch
Onboard-SDK-ROS/dji_sdk/src/modules/: dji_sdk_node.cpp  dji_sdk_node_services.cpp
arm_invkinematics/: CMakeLists.txt  package.xml
arm_invkinematics/config/: ArmInvKin_Config.yaml  test_params.yaml
arm_invkinematics/include/: ArmInvKine_Class.h  ArmInvRout_Class.h
arm_invkinematics/include/utils/: pseudo_inversion_switched.h  skew_symmetric.h
arm_invkinematics/launch/: arm_invkinematics.launch
arm_invkinematics/src/: ArmInvKine_Class.cpp  ArmInvKine_Node.cpp  ArmInvRout_Class.cpp  ArmInvRout_Node.cpp
drone_control/: CMakeLists.txt  package.xml
drone_control/include/: DroneControl_Node.h  Sample_Node.h
drone_control/src/: DroneControl_Node.cpp  Sample_Node.cpp
global_control/: CMakeLists.txt  package.xml
global_control/launch/: arm_teleoperation.launch  arm_teleoperation_sim.launch
head_control/: CMakeLists.txt  package.xml
head_control/config/: head_config.yaml
head_control/launch/: head.launch
head_control/src/: head_manager.cpp
oculus_bridge/: CMakeLists.txt  package.xml
oculus_bridge/config/: JoyBridge_Config.yaml
oculus_bridge/include/: JoyBridge_Class.h  VideoStream_Class.h
oculus_bridge/include/udp_interface/: udp_client.h  udp_server.h
oculus_bridge/launch/: oculus_bridge.launch  oculus_bridge_fakeimg.launch  oculus_bridge_sim.launch
oculus_bridge/src/: JoyBridge_Class.cpp  JoyBridge_Node.cpp  SimVisionBridge_Class.cpp  VideoStream_Class.cpp  VideoStream_Node.cpp
oculus_bridge/src/udp_interface/: udp_client.cpp  udp_server.cpp
qb_control/: CMakeLists.txt  package.xml
qb_control/include/: QbManager_Class.h  commands.h  imuboard_commands.h  imuboard_communications.h  qbmove_communications.h
qb_control/launch/: qb_control.launch
qb_control/src/: QbManager_Class.cpp  QbManager_Node.cpp  imuboard_communications.cpp  qbmove_communications.cpp
zed-oculus-drone/: How_to_configure.docx  LICENSE
zed-oculus-drone/include/: stdafx.h
zed-oculus-drone/src/: main.cpp  stdafx.cpp
zed_cpu_ros/: LICENSE
zed_cpu_ros/launch/: zed_cpu_ros.launch
zed_cpu_ros/src/: zed_cpu_ros.cpp
