<?xml version="1.0"?>
<package format="2">
  <name>arm_invkinematics</name>
  <version>0.0.0</version>
  <description>The arm_invkinematics package</description>

  <maintainer email="kong.fanyi95@gmail.com">Fanyi Kong</maintainer>
  <maintainer email="simone.monteleone@iit.it">Simone Monteleone</maintainer>

  <license>BSD 3-Clause License</license>
  <author>NMMI</author>
  <author>Istituto Italiano di Tecnologia, Soft Robotics for Human Cooperation and Rehabilitation Lab</author>
  <author>Centro di Ricerca E. Piaggio</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>

</package>
