<?xml version="1.0"?>
<package format="2">
  <name>drone_control</name>
  <version>0.0.0</version>
  <description>The drone_control package</description>
  
  <maintainer email="kong.fanyi95@gmail.com">Fanyi Kong</maintainer>
  <maintainer email="simone.monteleone@iit.it">Simone Monteleone</maintainer>

  <license>BSD 3-Clause License</license>
  <author>NMMI</author>
  <author>Istituto Italiano di Tecnologia, Soft Robotics for Human Cooperation and Rehabilitation Lab</author>
  <author>Centro di Ricerca E. Piaggio</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dji_sdk</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dji_sdk</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>

  </export>
</package>
