<?xml version="1.0"?>
<package format="2">
  <name>qb_control</name>
  <version>0.0.0</version>
  <description>The qb_control package</description>

  <maintainer email="kong.fanyi95@gmail.com">Fanyi Kong</maintainer>
  <maintainer email="simone.monteleone@iit.it">Simone Monteleone</maintainer>

  <license>BSD 3-Clause License</license>
  <author>NMMI</author>
  <author>Istituto Italiano di Tecnologia, Soft Robotics for Human Cooperation and Rehabilitation Lab</author>
  <author>Centro di Ricerca E. Piaggio</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>

  <export>

  </export>
</package>
